--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.9.3",
+		"zod": "^3.21.4"
+	}
 }
