--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.9.3",
+		"slugify": "^1.6.6",
 		"zod": "^3.21.4"
 	}
 }
