--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"update-types": "npx supabase gen types typescript --project-id \"qmcmuhpqtxdqkpkohtfs\" --schema public > src/supabase.ts"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -29,6 +30,7 @@
 		"postcss": "^8.4.22",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"supabase": "^1.50.9",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.1",
