--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"update-types": "npx supabase gen types typescript --project-id \"qmcmuhpqtxdqkpkohtfs\" --schema public > src/supabase.ts"
+		"update-types": "npx supabase gen types typescript --project-id \"qmcmuhpqtxdqkpkohtfs\" --schema public > src/supabase.ts",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -27,6 +28,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"husky": "^8.0.3",
 		"postcss": "^8.4.22",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
