--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"update-types": "npx supabase gen types typescript --project-id \"qmcmuhpqtxdqkpkohtfs\" --schema public > src/supabase.ts",
+		"update-types": "npx supabase gen types typescript --project-id \"qmcmuhpqtxdqkpkohtfs\" --schema public > src/types/supabase.ts",
 		"prepare": "husky install"
 	},
 	"devDependencies": {
